# autopilot

./: .gitignore  README.md  osu999_config.yaml  pyproject.toml
.github/workflows/: ci.yml
bathymetry/: gebco_2026_n35.0_s32.0_w-122.0_e-117.0.nc
boundaries/: RIOT_boundary.geojson
boundaries/predictions/: drifter_20260702T1200.csv  drifter_20260702T1800.csv  drifter_20260703T0000.csv  drifter_20260703T0600.csv  drifter_20260703T1200.csv  drifter_20260703T1800.csv  drifter_20260704T0000.csv  drifter_20260704T0600.csv  drifter_20260704T1200.csv  drifter_20260704T1800.csv  drifter_20260705T0000.csv  drifter_20260705T0600.csv  drifter_20260705T1200.csv
examples/: replay_real_logs.py  send_test_email.py
examples/simple_demo/: README.md  demo_config.yaml  demo_follower.py
src/autopilot/: __init__.py  follower.py  notify.py  safety.py
src/autopilot/sim/: __init__.py  closed_loop.py  live_drifter.py  mock_data.py
tests/: conftest.py  test_closed_loop.py  test_follower.py  test_live_drifter.py  test_notify.py  test_safety.py
tests/fixtures/: float6000_truth.csv
